# ActionTestRepo

./: manage.py  pyproject.toml
.github/workflows/: run-pytest-action.yml
app/: database.py
rethinkdb_data/: log_file
tests/: conftest.py  test_app.py  utils.py
