[tool.poetry]
name = "flask_gateway"
version = "0.1.0"
description = ""
authors = ["MischaD <mischa.dombrowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyYAML = "^5.3.1"
pyjade = "^4.0.0"
SQLAlchemy = "^1.3.18"
WTForms = "^2.3.1"
Werkzeug = "^1.0.1"
flask-cache = "^0.13.1"
mysqlclient = "^2.0.1"
python-dateutil = "^2.8.1"
uWSGI = "^2.0.19"
Flask = "^1.1.2"
Flask-Assets = "^2.0"
Flask-Bootstrap = "^3.3.7"
Flask-Cors = "^3.0.8"
Flask-Login = "^0.5.0"
Flask-Mail = "^0.9.1"
Flask-Markdown = "^0.3"
Flask-Migrate = "^2.5.3"
Flask-OpenID = "^1.2.5"
Flask-Principal = "^0.4.0"
Flask-SQLAlchemy = "^2.4.3"
Flask-Script = "^2.0.6"
Flask-Security = "^3.0.0"
Flask-Session = "^0.3.2"
flasgger = "^0.9.4"
marshmallow = "^3.6.1"
marshmallow_sqlalchemy = "^0.23.1"
apispec = "1.0.0b5"
flask-marshmallow = "^0.13.0"
email_validator = "^1.1.1"
rethinkdb = "^2.4.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
colorlog = "^4.1.0"
black = "^19.10b0"
coverage = "^5.2.1"
pytest = "^5.4.3"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
