[tool.poetry]
name = "flask_gateway"
version = "0.1.0"
description = ""
authors = ["MischaD <mischa.dombrowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"
rethinkdb = "^2.4.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
